<resources>
    <string name="app_name">Telkom Indonesia</string>
    <string name="company_name">Nama Perusahaan</string>
    <string name="content_company_name">
        Telkom Indonesia
        \nCabang Kedaton - Unit
    </string>
    <string name="address">Alamat</string>
    <string name="content_address">
        Jl. Sultan H. No.1, Sepang Jaya, Kec. Kedaton,
        \nKota Bandar Lampung, Lampung 35132
    </string>
    <string name="telephone">Telepon</string>
    <string name="content_telephone">(0721) 700000</string>
    <string name="about">Tentang Telkomgroup</string>
    <string name="content_about">
        PT Telkom Indonesia (Persero) Tbk (Telkom) adalah Badan Usaha Milik Negara (BUMN)
        yang bergerak di bidang jasa layanan teknologi informasi dan komunikasi (TIK) dan jaringan telekomunikasi di Indonesia.
        \nKegiatan usaha TelkomGroup bertumbuh dan berubah seiring dengan perkembangan teknologi, informasi dan digitalisasi,
        namun masih dalam koridor industri telekomunikasi dan informasi.
        Hal ini terlihat dari lini bisnis yang terus berkembang melengkapi legacy yang sudah ada sebelumnya.
    </string>
    <string name="digital_business_domain">3 Digital Business Domain:</string>
    <string name="content_digital_business_domain1"><b>Digital Connectivity:</b> Fiber to the x (FTTx), 5G, Software Defined Networking (SDN)/ Network Function Virtualization (NFV)/ Satellite</string>
    <string name="content_digital_business_domain2"><b>Digital Platform:</b> Data Center, Cloud, Internet of Things (IoT), Big Data/ Artificial Intelligence (AI), Cybersecurity</string>
    <string name="content_digital_business_domain3"><b>Digital Services:</b> Enterprise, Consumer</string>
    <string name="purpose">Purpose</string>
    <string name="content_purpose">
        Mewujudkan bangsa yang lebih sejahtera dan berdaya saing
        serta memberikan nilai tambah yang terbaik bagi para pemangku kepentingan.</string>
    <string name="visi">Visi</string>
    <string name="content_visi">Menjadi digital telco pilihan utama untuk memajukan masyarakat</string>
    <string name="misi">Misi</string>
    <string name="content_misi1">Mempercepat pembangunan Infrastruktur dan platform digital cerdas yang berkelanjutan, ekonomis, dan dapat diakses oleh seluruh masyarakat.</string>
    <string name="content_misi2">Mengembangkan talenta digital unggulan yang membantu mendorong kemampuan digital dan tingkat adopsi digital bangsa.</string>
    <string name="content_misi3">Mengorkestrasi ekosistem digital untuk memberikan pengalaman digital pelanggan terbaik</string>

    //Contact
    <string name="web">Web</string>
    <string name="content_web">www.telkom.co.id</string>
    <string name="email">Email</string>
    <string name="content_email">customercare@telkom.co.id</string>
</resources>