<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="11dp"
                app:cardCornerRadius="3dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="231dp"
                    android:layout_gravity="fill_vertical|fill_horizontal"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/place" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="11dp"
                app:cardCornerRadius="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="@string/about"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp"
                    android:lineSpacingMultiplier="1.1"
                    android:padding="7dp"
                    android:text="@string/content_about"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="11dp"
                app:cardCornerRadius="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="@string/digital_business_domain"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="31dp"
                            android:padding="7dp"
                            android:text="1."
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="31dp"
                            android:layout_marginBottom="3dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.1"
                            android:padding="1dp"
                            android:text="@string/content_digital_business_domain1"
                            android:textSize="13sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="2."
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.1"
                            android:padding="1dp"
                            android:text="@string/content_digital_business_domain2"
                            android:textSize="13sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="3."
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="14dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.1"
                            android:padding="1dp"
                            android:text="@string/content_digital_business_domain3"
                            android:textSize="13sp" />
                    </TableRow>

                </TableLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="11dp"
                app:cardCornerRadius="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="@string/purpose"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp"
                    android:lineSpacingMultiplier="1.1"
                    android:padding="7dp"
                    android:text="@string/content_purpose"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="11dp"
                app:cardCornerRadius="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="@string/visi"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp"
                    android:lineSpacingMultiplier="1.1"
                    android:padding="7dp"
                    android:text="@string/content_visi"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="11dp"
                app:cardCornerRadius="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="@string/misi"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="31dp"
                            android:padding="7dp"
                            android:text="1."
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="31dp"
                            android:layout_marginBottom="3dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.1"
                            android:padding="1dp"
                            android:text="@string/content_misi1"
                            android:textSize="13sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="2."
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.1"
                            android:padding="1dp"
                            android:text="@string/content_misi2"
                            android:textSize="13sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="3."
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="14dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.1"
                            android:padding="1dp"
                            android:text="@string/content_misi3"
                            android:textSize="13sp" />
                    </TableRow>

                </TableLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</FrameLayout>